# sophpi

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  app  build.sh  toolchain.cmake
include/: log.h  sys.h
src/: main.c  sys.c  vi.c
